<!--
  ~ Copyright 2019 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>
    <string name="app_name">Translate</string>
    <string name="translated_text_hint">Translated text</string>
    <string name="downloaded_models_label">Downloaded models: %1$s</string>
    <string name="translate_progress">Translating...</string>
    <string name="delete_model">Delete Model</string>
    <string name="download_model">Download Model</string>
    <string name="unknown_error">Unknown error occurred.</string>
    <string name="click_me">Text View with clickable Spannable String</string>
    <string name="word">Word</string>
    <string name="textview">TextView</string>
    <string name="hindi_word">Hindi Word:</string>
    <string name="speak">Speak</string>
    <string name="meaning">Meaning</string>
    <string name="change_value">Change Value</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="applicant_name">App</string>
    <string name="no_text_found">No Text Found</string>
    <string name="image_from_out_of_app">Image from out of app</string>
    <string name="insert_student">INSERT STUDENT</string>
    <string name="name">Naura Putri</string>
    <string name="nim">1301143434</string>
    <string name="fakultas">Fakultas Informatika</string>
    <string name="scan_activity">Scan Activity</string>
    <string name="saved_activity">Saved Activity</string>
</resources>
